tests/fixtures/invalid/pow_bytes_float.py
# Cannot call pow() with Bytes, Float
x = pow(b"hello", 1.0)
